tests/fixtures/invalid/bool_bitxor_bytes.py
# Cannot bitwise XOR Bool and Bytes
x: int = True ^ b"hello"
